--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15644,3 +15644,12 @@ body {
   background: #846bab;
 }
 
+/* ////////////// */
+
+.cest-badge {
+  position: relative !important;
+  top: -15px !important;
+  right: 10px !important;
+  z-index: 1 !important;
+}
+
