--- a/resources/sass/_app.css
+++ b/resources/sass/_app.css
@@ -94,3 +94,22 @@ body {
     right: 10px !important;
     z-index: 1 !important;
 }
+
+.contenedor{
+    position: relative;
+    display: inline-block;
+    text-align: center;
+}
+
+.centrado{
+    color: yellow;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+}
+
+.titulo-grande{
+    font-size: 48pt;
+}
